# map-gen

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PLAN.md  environment.yml  pyproject.toml  room_geometry.json  test_geometry.json  train.py  visualize.py
configs/: crateria.json  debug.json  norfair.json  norfair_cpu_gen.json  norfair_small.json  zebes.json  zebes_cpu.json  zebes_cpu_gen.json  zebes_serving.json  zebes_serving_cpu.json  zebes_serving_gpu.json  zebes_small_batch.json
python/: area_assignment.py  delete_short_aim_runs.py  env.py  experience.py  features.py  generate.py  learn.py  loss.py  model.py  model_loading.py  serve.py  simulate_frontier_graph.py  small_map.py  test_area_assignment.py  test_area_rewards.py  test_proposal_action.py  test_room_area_plumbing.py  test_serve_edges.py  test_serve_request.py  test_small_map.py  train.py  train_config.py  visualize.py
room_definitions/: crateria.json  norfair.json  zebes.json
scripts/: export_model.py  populate_door_ids.py  sample_generate_request.py
src/: common.rs  engine.rs  environment.rs  lib.rs  scc_dag.rs
