[package]
name = "map-gen"
version = "0.1.0"
edition = "2024"

[lib]
name = "map_gen"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
bitvec = "1.0.1"
crossbeam-channel = "0.5.15"
delaunator = "1.1"
hashbrown = "0.17.1"
numpy = "0.28"
pyo3 = { version = "0.28", features = ["extension-module", "anyhow", "experimental-inspect"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
codegen-units = 1
